# lmsapi

./: .env  .env.sample  .gitignore  Dockerfile  README.md  check-mypy.sh  cookies.txt  curl-commands.sh  docker-compose.yml  docker_entrypoint.sh  lms_nginx.conf  mkdocs.yml  pyproject.toml  requirements-local.txt  run-local.sh  run-tests.sh  setup-local.sh  todo.txt
apps/lib/: utils.py
apps/lib/base_views/: api_base.py  base_types.py
apps/lib/middleware/: api_error.py  content_type.py  json_data_loader.py
apps/lib/tests/: test_api_error_middleware.py  test_base_api.py  test_content_type_middleware.py  test_json_data_loader_middleware.py
apps/test_utils/: base_api_calls.py  dummy_views.py  urls.py
apps/test_utils/tests/: test_base_api_calls.py
apps/users/: admin.py  admin_forms.py  constants.py  managers.py  models.py  urls.py  validators.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_user_creation_model.py  test_views.py
config/: urls.py  uwsgi.ini
config/settings/: base.py  get_secrets.py  local.py  test.py
nginx/: Dockerfile  lms_nginx_docker.conf
scripts/: run-tests.sh  setup-local.sh
scripts/docker/: docker-initial-setup.sh
